noinst_LTLIBRARIES=libgenetics.la

libgenetics_la_SOURCES=allelicdecoder.cpp \
	binarygenoparser.cpp \
	eliminategenotypeerrors.cpp \
	familyevaluation.cpp \
	familynode.cpp \
	familymember.cpp \
	familyrepoevaluationbasic.cpp \
	familyrepoevaluation.cpp \
	familyrepository.cpp \
	fixtrios.cpp \
	genotypedata.cpp \
	gtevaluation.cpp \
	gtfileparser.cpp \
	gtfileparserbuffered.cpp \
	gtlineparser.cpp \
	modelstatistics.cpp \
	ptestdistribution.cpp \
	resultsrepository.cpp \
	snpaligned.cpp  \
	snpevalsuite.cpp \
	snppool.cpp \
	snpcontainer.cpp \
	snprecipient.cpp \
	snprepository.cpp \
	snprepostxtsorted.cpp \
	snpverificationmethod.cpp
	
AM_CPPFLAGS=-I..
