noinst_LTLIBRARIES=libsimulation.la

libsimulation_la_SOURCES=basicsample.cpp \
	blocklistnode.cpp \
	blocklistnodefourgammetes.cpp \
	chromosome.cpp \
	chrompool.cpp \
	diseasemodel.cpp \
	distmappingfn.cpp \
	exponentialgrowth.cpp \
	gamodel.cpp \
	growthrate.cpp \
	kinshipcalculator.cpp \
	ldfooterregion.cpp \
	ldprimepngwriter.cpp \
	ldlabelregion.cpp \
	ldlineplot.cpp \
	ldlocationbar.cpp \
	ldmafregion.cpp \
	ldpngcomponent.cpp \
	ldplotter.cpp \
	ldwriter.cpp \
	locus.cpp \
	locusassociation.cpp \
	locreport.cpp \
	locselection.cpp \
	logisticgrowth.cpp \
	lineargrowth.cpp \
	individual.cpp \
	meantable.cpp \
	minchrom.cpp \
	pedigreereferencesample.cpp \
	pedigreesample.cpp \
	penetranceeval.cpp \
	penetrancemodel.cpp \
	penfilemodel.cpp \
	poolmanager.cpp \
	richardslogistic.cpp \
	simlamodel.cpp \
	templatedpedigree.cpp
	
AM_CPPFLAGS=-I.. $(FREETYPE_CPPFLAGS)
