noinst_LTLIBRARIES=libutility.la

libutility_la_SOURCES=application.cpp \
	basiclog.cpp \
	binarrayparser.cpp \
	casecontrolstatus.cpp \
	configurationparser.cpp \
	executionlog.cpp \
	filebuffer.cpp \
	genolookup.cpp \
    genobplookup.cpp \
	generatereport.cpp \
	genotypeparser.cpp \
	lineparser.cpp \
	random.cpp \
	stringlookup.cpp \
	strings.cpp \
	typelookup.cpp \
	types.cpp
	
AM_CPPFLAGS=-I..
